# baton

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
docs/: README.md  cli.md  data-flow.md  error-handling.md  implementation-plan.md  list_pipes.md  overview.md  windows-api.md
src/: assuan.rs  cli.rs  errors.rs  lib.rs  logging.rs  main.rs  relay.rs
src/win/: console.rs  mod.rs  overlapped.rs  pipe.rs  pipes_enum.rs
