[package]
name = "baton"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Glob pattern matching
glob = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
# Windows APIs
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }


